# dns-proxy-filter-p2B9agE1

./: .gitignore  CMakeLists.txt  Makefile  README.md  dns_proxy_filter_p2B9agE1
include/: configreader.cppm  configreader.h  handlefilters.cppm  handlefilters.h  ipsender.cppm  ipsender.h  upstreamreq.cppm  upstreamreq.h  utils.cppm  utils.h
src/: configreader.c  configreader.cpp  configreader_impl.cpp  handlefilters.c  handlefilters.cpp  handlefilters_impl.cpp  ipsender.c  ipsender.cpp  ipsender_impl.cpp  main.c  main.cpp  upstreamreq.c  upstreamreq_impl.cpp  utils.c  utils.cpp  utils_impl.cpp
